@@ -1,3 +1,8 @@
+2005-08-19  Miklos Szeredi <miklos@szeredi.hu>
+
+	* lib: always refresh directory contents after rewinddir() to
+	conform to SUS.  Bug found by John Muir.
+
 2005-08-15  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Released 2.4.0-pre1
